  fixing the bug resulted in the corrected intended file format that is slightly different than that used in v2/3.
  Because of this file format change, we are increasing the major version number. Backward compatibility is provided
  for correctly decompressing all files compressed with v2/3.

- VCF files that contain lines with Windows-style line ending \r\n will now compress losslessly preserving the line 
  ending

4.0.2
- genozip can now compress .bcf .bcf.gz .bcf.bgz and .xz files
- genounzip can now de-compress into a bgzip-ed .vcf.gz file

4.0.4
- add support for compressing a file directly from a URL
- remove support for 32-bit Windows (its been broken for a while)

4.0.6
- bug fixes

4.0.9
- improve performance for --samples --drop-genotypes --gt-only --strip and --regions - skip reading and decompressing
  all unneeded sections (previously partially implemented, now complete)
- bug fixes
  
4.0.10 
- updated license
- added --header-one to genocat
- query user whether to overwrite an existing file
- better error messages when running external tools
- bug fixes

4.0.11
- bug fixes

5.0.0
- Added full support for compressing SAM/BAM, FASTQ, FASTA and 23andMe files
- Compression improvements for some VCF files with 1. lots of non-GT FORMAT subfields or 2. ID data
- Added genounzip output options: --bcf for VCF files and --bam for SAM files
- Added --input-type - tell genozip what type of file this is - if re-directing or file has non-standard extension
- Added --stdin-size - tell genozip the size of a redirected input file, for faster execution
- Added --show-index for genounzip and genocat - see index embedded in a genozip file
- Added --fast option for (a lot) faster compression, with (somewhat) reduced compression ratio
- Added --grep for genocat FASTQ

Note: some versions numbers are skipped due to failed conda builds (every build attempt consumes a version number)